syntax = "proto3";
import "pkg/proto/common.proto";

package linearSrs;

option go_package ="github.com/kioku-project/kioku/services/linearSrs/proto;linearSrs";

service LinearSrs {
	rpc Push(common.SrsPushRequest) returns (common.Success) {}
	rpc Pull(common.DeckRequest) returns (common.Card) {}
	rpc AddUserCardBinding(common.BindingRequest) returns (common.Success) {}
	rpc GetDeckCardsDue(common.DeckRequest) returns (common.UserDueResponse) {}
	rpc GetUserCardsDue(common.User) returns (common.UserDueResponse) {}
}